force-app/main/default/objects/CallableHandler__mdt/CallableHandler__mdt.object-meta.xml
<CustomObject>
    <label>CallableHandler</label>
    <pluralLabel>CallableHandlers</pluralLabel>
</CustomObject>