force-app/main/default/objects/CallableHandler__mdt/fields/classname__c.field-meta.xml
<CustomField>
    <fullName>classname__c</fullName>
    <label>classname</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>