force-app/main/default/objects/CallableHandler__mdt/fields/namespace__c.field-meta.xml
<CustomField>
    <fullName>namespace__c</fullName>
    <label>namespace</label>
    <length>80</length>
    <type>Text</type>
</CustomField>